--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="work-content">
                   <h3>Habitose - Habit Tracker App</h3>
                   <p>A mobile app for building and tracking healthy habits, with a fun and motivating design.</p>
-                  <a href="https://www.notion.so/Habitose-Habits-Tracker-App-15e019df912680699260e593fae9e88f?pvs=4" class="case-study-btn">
+                  <a href="https://hungry-tendency-852.notion.site/Habitose-Habits-Tracker-App-15e019df912680699260e593fae9e88f?pvs=4" class="case-study-btn">
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     <span>Check Out the Case Study</span>
                   </a>            
@@ -138,7 +138,7 @@
                 <div class="work-content">
                   <h3>Plantino - Plant Selling Website</h3>
                   <p>A website designed for selling plants, focusing on aesthetics and usability to connect nature with modern design.</p>
-                  <a href="https://www.notion.so/Plantino-Plant-Selling-Website-15e019df9126806eb178d015d4b31c37?pvs=4" class="case-study-btn">
+                  <a href="https://hungry-tendency-852.notion.site/Plantino-Plant-Selling-Website-15e019df9126806eb178d015d4b31c37?pvs=4" class="case-study-btn">
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     <span>Check Out the Case Study</span>
                   </a>
@@ -150,7 +150,7 @@
                 <div class="work-content">
                   <h3>Coding Courses Website</h3>
                   <p>A platform offering coding tutorials, certifications, and resources for all skill levels, with an emphasis on user-friendly navigation.</p>
-                  <a href="https://www.notion.so/Coding-Courses-Website-15e019df9126806ca0c7db9908afadfc?pvs=4" class="case-study-btn">
+                  <a href="https://hungry-tendency-852.notion.site/Coding-Courses-Website-15e019df9126806ca0c7db9908afadfc?pvs=4" class="case-study-btn">
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     <span>Check Out the Case Study</span>
                   </a>            </div>
@@ -161,7 +161,7 @@
                 <div class="work-content">
                   <h3>RecipeShare - Food Recipe Sharing App</h3>
                   <p>A community-driven app for discovering, sharing, and saving recipes, aimed at fostering a social experience around cooking.</p>
-                  <a href="https://www.notion.so/RecipeShare-Food-Recipe-Sharing-App-15e019df91268044b129dc116a8d841d?pvs=4" class="case-study-btn">
+                  <a href="https://hungry-tendency-852.notion.site/RecipeShare-Food-Recipe-Sharing-App-15e019df91268044b129dc116a8d841d?pvs=4" class="case-study-btn">
                     <i class="fa-solid fa-arrow-up-right-from-square"></i>
                     <span>Check Out the Case Study</span>
                   </a>            </div>
