--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <a href="#work" class="navbar-item">Work</a>
             <a href="#social" class="navbar-item">Social Media</a>
         </nav>
-        <a class="hideOnmobile" href="#" style="padding: 10px 20px; background: #333; color: #fff; text-decoration: none; border-radius: 5px;">
+        <a class="hideOnmobile" href="img/cv.pdf" target="_blank" 
+            style="padding: 10px 20px; background: #333; color: #fff; text-decoration: none; border-radius: 5px;">
             <i class="fa-solid fa-download"></i>
             Resume</a>
 
