--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 <li><a href="#social" class="navbar-item">Social Media</a></li>
             </ul>
         </nav>
-        <a href="#" style="padding: 10px 20px; background: #333; color: #fff; text-decoration: none; border-radius: 5px;">
+        <a href="img/cv.pdf" target="_blank" 
+            style="padding: 10px 20px; background: #333; color: #fff; text-decoration: none; border-radius: 5px;">
             <i class="fa-solid fa-download"></i>
             Resume</a>
     </header>
